# taxer

./: .gitignore  MANIFEST.in  README.md  main.py  prepare.sh  pyproject.toml  requirements.txt  setup.cfg  taxer.code-workspace  tox.ini  workspace.code-workspace
doc/sad/: activityApplication.puml  activityBitBox.puml  activityCex.puml  activityCoinbasePro.puml  classes.puml  objects.puml
src/: __main__.py  cli.py
src/taxer/: application.py  container.py  ignore.py  payments.py  pluginLoader.py  throttler.py
src/taxer/accounting/: accountingfactory.py  baseCurrency.py  costCenter.py  factory.py
src/taxer/currencyConverters/: coinGecko.py  csvFileArray.py  csvFileDict.py  currencyConverter.py  excelRates.py  (+7 more)
taxer/: application.py  ignore.py  main.py  payments.py
taxer/accounting/: accounting.py  baseCurrency.py  costCenter.py  factory.py  transformer.py
taxer/currencyConverters/: coinGecko.py  currencyConverter.py  currencyConverters.py  excelRates.py  exchangeRatesApiIo.py
taxer/mergents/: factory.py  fileReader.py  mergent.py  mergents.py  payment.py  reader.py  reimbursement.py  sellTrade.py  trade.py  transaction.py  transfer.py  withdrawTransfer.py
taxer/transactions/: buyTrade.py  covesting.py  currency.py  depositTransfer.py  endStake.py  enterLobby.py  exitLobby.py  lobby.py  marginTrade.py  payment.py  reimbursement.py  sellTrade.py  stake.py  startStake.py  trade.py  transfer.py  withdrawTransfer.py
taxer/writers/: csvWriter.py  factory.py  writer.py
testData/: Shareholder.csv
tests/: testData.py
tests/transactions/: test_transaction.py
(+192 files in other folders)
