[metadata]
name = taxer
version = 0.0.1
author = Patrick Dreyer
author_email = Patrick@Dreyer.name
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
url = https://github.com/patrickdreyer/taxer
project_urls =
    Changelog = https://github.com/patrickdreyer/taxer/releases
    Issue Tracker = https://github.com/patrickdreyer/taxer/issues
# complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Office/Business :: Financial :: Accounting

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    taxer = taxer.cli:main
